<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.produtsFragments.ProductDetailsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_350sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_img"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cv1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="-30dp"
            android:background="@drawable/top_radious_bg"
            android:elevation="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgProduct">

            <TextView
                android:id="@+id/productName"
                style="@style/headingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/girls_full_dress"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvProductID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/popins_loght"
                android:text="#123A43CBC48"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintLeft_toLeftOf="@id/productName"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productName" />

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintRight_toRightOf="@id/tvProductID"
                app:layout_constraintTop_toBottomOf="@id/tvProductID">

                <TextView
                    style="@style/headingStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/popins_semibold"
                    android:text="@string/_240"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll1">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/spSize"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/imgSave"
                    app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/sizes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imgSave"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/rounded_main_color"
                    android:padding="@dimen/_12sdp"
                    android:src="@drawable/ic_unsaved"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/spSize"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <Button
                    android:id="@+id/btnAddtoCart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/btn_outlined"
                    android:fontFamily="@font/popins_regular"
                    android:text="@string/add_to_cart"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/btnBuyNow"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnBuyNow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:background="@drawable/rounded_main_color"
                    android:fontFamily="@font/popins_regular"
                    android:text="@string/buy_now"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/btnAddtoCart"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>